--- a/Cv.tex
+++ b/Cv.tex
@@ -24,7 +24,7 @@
         \textbf{Country:} Luxembourg\\
         \textbf{Phone:} **** \\
         \textbf{Email:} felixgasiaux@proton.me\\
-        \textbf {Birth:} 17.11.2004 \\
+        \textbf {Birth:} **** \\
         \textbf{Nationality:} Belgian \& Luxembourgish\\
 
     \end{flushleft}
