--- a/Cv.tex
+++ b/Cv.tex
@@ -23,7 +23,7 @@
         \textbf{Location:} **** \\
         \textbf{Country:} Luxembourg\\
         \textbf{Phone:} **** \\
-        \textbf{Email:} felixgasiaux@proton.me\\
+        \textbf{Email:} felix_gasiaux@proton.me\\
         \textbf {Birth:} **** \\
         \textbf{Nationality:} Belgian \& Luxembourgish\\
 
